--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-server.port=8082
+server.port=8083
+WSDL.ClientEndpoint=http://localhost:8083/country
+
+service.endpoint-url=http://webservices.oorsprong.org/websamples.countryinfo/CountryInfoService.wso
